--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="grey_coal_500">#010101</color>
     <color name="grey_coal_400">#212529</color>
     <color name="grey_coal_300">#202530</color>
+    <color name="grey_coal_200">#35424a</color>
 
     <color name="grey_500">#95a1b0</color>
     <color name="grey_400">#989eb1</color>
