--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,124 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.Estudia" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Estudia" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBarOverlay">false</item>
+        <item name="colorPrimary">@color/mustard_500</item>
+        <item name="android:textColorPrimary">@color/white_400</item>
+    </style>
+
+<!--    Constraints Layouts Styles-->
+
+    <style name="ConstraintLayoutBase">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/mustard_500</item>
+    </style>
+
+<!--    Width & Height Base Styles-->
+
+    <style name="WightHeightBase">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="WightHeightWrap">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+<!--    Linear Layouts Styles-->
+
+    <style name="LinearLayoutBase">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="LinearLayoutAlignItems">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_marginStart">45dp</item>
+        <item name="android:layout_marginEnd">45dp</item>
+    </style>
+
+    <style name="LinearLayoutTextEdit">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+<!--    Text Views Styles-->
+
+    <style name="TitleTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">50dp</item>
+        <item name="android:fontFamily">@font/quicksand_bold</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/grey_coal_500</item>
+        <item name="android:textAlignment">viewStart</item>
+    </style>
+
+    <style name="TitleMediumTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:fontFamily">@font/asap_regular</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/grey_coal_500</item>
+        <item name="android:textAlignment">viewStart</item>
+    </style>
+
+    <style name="SubtitleBoldTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:fontFamily">@font/asap_semibold</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/grey_coal_400</item>
+        <item name="android:textAlignment">viewStart</item>
+    </style>
+
+<!--    Buttons Style-->
+
+    <style name="PrincipalButtonStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">46dp</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:background">@color/grey_coal_300</item>
+        <item name="android:textColor">@color/white_300</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+<!--    Text Input Edit Text-->
+
+    <style name="TextInputEditStyle" parent="@style/WightHeightWrap">
+        <item name="android:textColor">@color/grey_coal_200</item>
+        <item name="android:textColorHint">@color/grey_coal_200</item>
+    </style>
+
+<!--    Hint Appearance Styles-->
+
+    <style name="HelperTextAppearance">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold|italic</item>
+    </style>
+
+    <style name="ErrorTextAppearance">
+        <item name="android:textColor">@android:color/holo_orange_dark</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold|italic</item>
     </style>
 
     <style name="Theme.Estudia" parent="Base.Theme.Estudia" />
