--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,10 +88,44 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/loginButton"
                     android:text="@string/login"
                     style="@style/PrincipalButtonStyle"/>
 
+                <LinearLayout
+                    android:id="@+id/linearLayoutRegisterLogin"
+                    android:layout_marginTop="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    style="@style/LinearLayoutHorizontalBase">
+
+                    <TextView
+                        android:id="@+id/textRegisterLogin"
+                        android:text="@string/no_account_message"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:textAlignment="center"
+                        style="@style/SubtitleGreyTextView"/>
+
+                    <TextView
+                        android:id="@+id/buttonRegisterLogin"
+                        android:text="@string/signup"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        style="@style/SubtitleTangerineTextView"/>
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textRigthsLogin"
+                    android:text="@string/rights"
+                    android:textAlignment="center"
+                    android:textSize="11sp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginBottom="20dp"
+                    style="@style/TitleMediumTextView"/>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
