:construction: Add new ViewPager for intro a Estudia
Customer Intro

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        tools:ignore="MissingConstraints"
+        style="@style/LinearLayoutBase">
 
+        <LinearLayout
+            style="@style/LinearLayoutAlignItems">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="300sp"
+                android:textAlignment="center"
+                android:text="Hello World!"/>
+
+            <Button
+                android:id="@+id/buttonLogOut"
+                android:text="Salir"
+                style="@style/PrincipalButtonStyle"/>
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
