--- a/app/src/main/res/layout/slider_customer_register_layout.xml
+++ b/app/src/main/res/layout/slider_customer_register_layout.xml
@@ -22,48 +22,54 @@
         <TextView
             android:id="@+id/questionTitleCustomerRegister"
             android:text="@string/title_register"
-            android:textSize="18sp"
             android:layout_marginTop="0dp"
             android:textAlignment="center"
-            style="@style/SubtitleBoldTextView" />
+            style="@style/TitleTextView" />
 
-        <LinearLayout
-            android:id="@+id/buttonsPanelCustomerRegister"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/questionSubtitleCustomerRegister"
+            android:text="Holahdshjhasdh"
+            android:layout_marginTop="20dp"
+            android:textAlignment="center"
+            style="@style/TitleMediumTextView"/>
 
-            <Button
-                android:id="@+id/yesButtonCustomerRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:background="@drawable/rounded_customer_register_button"
-                android:text="Si"
-                android:textColor="@color/grey_coal_500" />
+<!--        <LinearLayout-->
+<!--            android:id="@+id/buttonsPanelCustomerRegister"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="10dp"-->
+<!--            android:layout_marginEnd="10dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:orientation="horizontal">-->
 
-            <Button
-                android:id="@+id/notButtonCustomerRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:background="@drawable/rounded_customer_register_button"
-                android:text="No"
-                android:textColor="@color/grey_coal_500" />
-        </LinearLayout>
+<!--            <Button-->
+<!--                android:id="@+id/yesButtonCustomerRegister"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="0.5"-->
+<!--                android:background="@drawable/rounded_customer_register_button"-->
+<!--                android:text="Si"-->
+<!--                android:textColor="@color/grey_coal_500" />-->
 
-        <Spinner
-            android:id="@+id/spinnerCustomerRegister"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:textColor="@color/grey_coal_400"
-            android:backgroundTint="@color/grey_coal_400"
-            android:entries="@array/gender" />
+<!--            <Button-->
+<!--                android:id="@+id/notButtonCustomerRegister"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="0.5"-->
+<!--                android:background="@drawable/rounded_customer_register_button"-->
+<!--                android:text="No"-->
+<!--                android:textColor="@color/grey_coal_500" />-->
+<!--        </LinearLayout>-->
+
+<!--        <Spinner-->
+<!--            android:id="@+id/spinnerCustomerRegister"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:layout_marginStart="10dp"-->
+<!--            android:layout_marginEnd="10dp"-->
+<!--            android:textColor="@color/grey_coal_400"-->
+<!--            android:backgroundTint="@color/grey_coal_400"-->
+<!--            android:entries="@array/gender" />-->
     </LinearLayout>
 </LinearLayout>
