--- a/app/src/main/res/layout/activity_base_template.xml
+++ b/app/src/main/res/layout/activity_base_template.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".BaseTemplate"
+    tools:context=".activities.BaseTemplate"
     style="@style/ConstraintLayoutBase">
 
     <LinearLayout
