--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
 
     <color name="grey_500">#95a1b0</color>
     <color name="grey_400">#989eb1</color>
+    <color name="grey_200">#e8e8e8</color>
+    <color name="grey_100">#cccccc</color>
 
     <color name="tangerine_300">#d56b36</color>
 </resources>
