:construction: Fix PersonalitySurvey, can make scroll to left and the questions pass automatically after answer of user

--- a/app/src/main/res/layout/activity_personality_survey.xml
+++ b/app/src/main/res/layout/activity_personality_survey.xml
@@ -28,7 +28,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textProgressTitle" />
 
-    <androidx.viewpager.widget.ViewPager
+    <com.example.estudia.adapters.CustomViewPager
         android:id="@+id/slideViewPagerPersonalitySurvey"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
